Corrects wrong example configuration file

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,5 +1,6 @@
 ---
-region: "eu-central-1"
-id: "EXAMPLEKEYID"
-key: "mysecretkey"
+region_name: "eu-central-1"
+aws_access_key_id: "EXAMPLEKEYID"
+aws_secret_access_key: "exAmplE-Secr3t-K3y"
+key_pair: "~/.ssh/ec2.pub"
 ...
