--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,4 +3,8 @@ region_name: "eu-central-1"
 aws_access_key_id: "EXAMPLEKEYID"
 aws_secret_access_key: "exAmplE-Secr3t-K3y"
 key_pair: "key_name"
+security_groups_zk: ["sg-f87e2690", "sg-fa4ca692", "sg-de1a46b6"]
+security_groups_ni: ["sg-fa4ca692", "sg-dee8cfb6", "sg-de1a46b6"]
+security_groups_sv: ["sg-fa4ca692", "sg-02e8cf6a", "sg-de1a46b6"]
+security_groups_ui: ["sg-fa4ca692", "sg-e9f7d081", "sg-de1a46b6"]
 ...
