Enables supervisors and slots number configuration

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -7,4 +7,6 @@ security_groups_zk: ["sg-f87e2690", "sg-fa4ca692", "sg-de1a46b6"]
 security_groups_ni: ["sg-fa4ca692", "sg-dee8cfb6", "sg-de1a46b6"]
 security_groups_sv: ["sg-fa4ca692", "sg-02e8cf6a", "sg-de1a46b6"]
 security_groups_ui: ["sg-fa4ca692", "sg-e9f7d081", "sg-de1a46b6"]
+supervisors: 1
+slots: 8
 ...
